Cria estrutura Menu e separa arquivos css

--- a/index.html
+++ b/index.html
@@ -6,5 +6,35 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Jornanda Viagens</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html" title="Voltar para a página inicial">
+        <img
+          src="img/bussula-jornada-branca.png"
+          alt="Bussula ao logo Jornada Viagens na cor preta"
+        />
+      </a>
+      <img src="img/menu.png" alt="Menu" />
+      <nav>
+        <ul>
+          <li>
+            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+          </li>
+          <li>
+            <a
+              href="pacotes.html"
+              target="_blank"
+              title="Acessar Pacotes de Viagem"
+              >Pacotes de viagem</a
+            >
+          </li>
+          <li>
+            <a href="contato.html" target="_blank" title="Acessar Contato"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
