--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" title="Voltar para a página inicial">
+      <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
           src="img/bussula-jornada-branca.png"
           alt="Bussula ao logo Jornada Viagens na cor preta"
