Adiciona flex box ao header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           alt="Bussula ao logo Jornada Viagens na cor preta"
         />
       </a>
-      <img src="img/menu.png" alt="Menu" />
+      <div class="navigation-menu">
+        <img src="img/menu.png" alt="Menu" />
       <nav>
         <ul>
           <li>
@@ -35,6 +36,7 @@
           </li>
         </ul>
       </nav>
+      </div>
     </header>
   </body>
 </html>
