--- a/index.html
+++ b/index.html
@@ -15,27 +15,30 @@
         />
       </a>
       <div class="navigation-menu">
-        <img src="img/menu.png" alt="Menu" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
-          </li>
-          <li>
-            <a
-              href="pacotes.html"
-              target="_blank"
-              title="Acessar Pacotes de Viagem"
-              >Pacotes de viagem</a
-            >
-          </li>
-          <li>
-            <a href="contato.html" target="_blank" title="Acessar Contato"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+        <label for="menu">
+          <img src="img/menu.png" alt="Menu" />
+        </label>
+        <input type="checkbox" id="menu" hidden />
+        <nav>
+          <ul class="list-links">
+            <li>
+              <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+            </li>
+            <li>
+              <a
+                href="pacotes.html"
+                target="_blank"
+                title="Acessar Pacotes de Viagem"
+                >Pacotes de viagem</a
+              >
+            </li>
+            <li>
+              <a href="contato.html" target="_blank" title="Acessar Contato"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
   </body>
