--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <header>
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
+          class="img-mobile"
           src="img/bussula-jornada-branca.png"
-          alt="Bussula ao logo Jornada Viagens na cor preta"
+          alt="Bussula ao logo Jornada Viagens na cor branca"
+        />
+        <img
+          class="img-desktop"
+          src="img/bussula-texto-jornada-branco.png"
+          alt="Logo Jornada Viagens na cor branca"
         />
       </a>
       <div class="navigation-menu">
@@ -41,5 +47,13 @@
         </nav>
       </div>
     </header>
+    <section class="hero">
+      <img src="img/hero-mobile.png" alt="" />
+      <h2>
+        Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
+        à seleção das atividades, cuidamos de todos os detalhes para que você
+        aproveite ao máximo cada momento da sua jornada!
+      </h2>
+    </section>
   </body>
 </html>
