Adiciona titulo componentizado

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="Favicon.png">
     <link rel="stylesheet" href="css/style.css" />
     <title>Jornanda Viagens</title>
   </head>
@@ -55,5 +56,17 @@
         aproveite ao máximo cada momento da sua jornada!
       </h2>
     </section>
+    <section class="offers">
+      <div class="section-title">
+        <h2>Ofertas da Semana</h2>
+        <hr>
+      </div>
+    </section>
+    <!-- <section class="categories">
+      <div class="section-title">
+        <h2>Busque por categoria</h2>
+        <hr>
+      </div>
+    </section> -->
   </body>
 </html>
