--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="Favicon.png">
+    <link rel="icon" href="Favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Jornanda Viagens</title>
   </head>
@@ -59,7 +59,21 @@
     <section class="offers">
       <div class="section-title">
         <h2>Ofertas da Semana</h2>
-        <hr>
+        <hr />
+      </div>
+      <div class="offers-cards">
+        <article class="card">
+          <header>
+            <p>HOTEL+AEREO</p>
+            <h3>
+              Japão<br />
+              <span>R$ 4000</span>
+            </h3>
+          </header>
+          <footer>
+            <a href="#" class="button"> Ver detalhes </a>
+          </footer>
+        </article>
       </div>
     </section>
     <!-- <section class="categories">
