Finaliza estilizacao de botao

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="offers-cards">
         <article class="card">
           <header>
-            <p>HOTEL+AEREO</p>
+            <p>HOTEL+AÉREO</p>
             <h3>
               Japão<br />
               <span>R$ 4000</span>
