Ajuste de layout da sessao categoria

--- a/index.html
+++ b/index.html
@@ -48,75 +48,127 @@
         </nav>
       </div>
     </header>
-    <section class="hero">
-      <div class="hero-img"></div>
-      <h2>
-        Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
-        à seleção das atividades, cuidamos de todos os detalhes para que você
-        aproveite ao máximo cada momento da sua jornada!
-      </h2>
-    </section>
-    <section class="offers">
-      <div class="section-title">
-        <h2>Ofertas da Semana</h2>
-        <hr />
-      </div>
-      <div class="offers-cards">
-        <article class="card japao">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>
-              Japão<br />
-              <span>R$ 4000</span>
-            </h3>
-          </header>
-          <footer>
-            <a href="#" class="button"> Ver detalhes </a>
-          </footer>
-        </article>
-        <article class="card san-andreas">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>
-              San Andreas<br />
-              <span>R$ 3000</span>
-            </h3>
-          </header>
-          <footer>
-            <a href="#" class="button"> Ver detalhes </a>
-          </footer>
-        </article>
-        <article class="card paraiba">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>
-              Paraíba<br />
-              <span>R$ 1200</span>
-            </h3>
-          </header>
-          <footer>
-            <a href="#" class="button"> Ver detalhes </a>
-          </footer>
-        </article>
-        <article class="card manaus">
-          <header>
-            <p>HOTEL+AÉREO</p>
-            <h3>
-              Manaus<br />
-              <span>R$ 1600</span>
-            </h3>
-          </header>
-          <footer>
-            <a href="#" class="button"> Ver detalhes </a>
-          </footer>
-        </article>
-      </div>
-    </section>
-    <!-- <section class="categories">
-      <div class="section-title">
-        <h2>Busque por categoria</h2>
-        <hr>
-      </div>
-    </section> -->
+    <main>
+      <section class="hero">
+        <div class="hero-img"></div>
+        <h2>
+          Somos uma agência apaixonada por criar viagens inesquecíveis. Do
+          destino à seleção das atividades, cuidamos de todos os detalhes para
+          que você aproveite ao máximo cada momento da sua jornada!
+        </h2>
+      </section>
+      <section class="section-page offers">
+        <div class="section-title">
+          <h2>Ofertas da Semana</h2>
+          <hr />
+        </div>
+        <div class="offers-cards">
+          <article class="card japao">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Japão<br />
+                <span>R$ 4000</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button"> Ver detalhes </a>
+            </footer>
+          </article>
+          <article class="card san-andreas">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                San Andreas<br />
+                <span>R$ 3000</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button"> Ver detalhes </a>
+            </footer>
+          </article>
+          <article class="card paraiba">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Paraíba<br />
+                <span>R$ 1200</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button"> Ver detalhes </a>
+            </footer>
+          </article>
+          <article class="card manaus">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Manaus<br />
+                <span>R$ 1600</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button"> Ver detalhes </a>
+            </footer>
+          </article>
+        </div>
+      </section>
+      <section class="categories">
+        <div class="section-title">
+          <h2>Busque por Categoria</h2>
+          <hr />
+        </div>
+        <div class="categories-cards">
+          <a
+            href="#"
+            class="cards"
+            target="_blank"
+            title="Busque Categoria Pacotes Nacionais"
+          >
+            <img
+              src="img/icon-pacotes-nacionais.png"
+              alt="Icone de alpinista"
+            />
+            <h3>Pacotes <br />Nacionais</h3>
+          </a>
+           <a
+            href="#"
+            class="cards"
+            target="_blank"
+            title="Busque Categoria Pacotes Internacionais"
+          >
+            <img
+              src="img/icon-pacotes-interacionais.png"
+              alt="Icone de avião"
+            />
+            <h3>Pacotes <br> Internacionais</h3>
+          </a>
+           <a
+            href="#"
+            class="cards single-line"
+            target="_blank"
+            title="Busque Categoria Pacotes Transfer"
+          >
+            <img
+              src="img/icon-transfer.png"
+              alt="Icone de Carro"
+            />
+            <h3>Transfer</h3>
+          </a>
+           <a
+            href="#"
+            class="cards single-line tranfer"
+            target="_blank"
+            title="Busque Categoria Pacotes Seguro Viagem"
+          >
+            <img
+              src="img/icon-seguro-viagem.png"
+              alt="Globo terrestre com cadeado"
+            />
+            <h3>Seguro Viagem</h3>
+          </a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
