--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jornanda Viagens</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
           class="img-mobile"
@@ -131,7 +131,7 @@
             />
             <h3>Pacotes <br />Nacionais</h3>
           </a>
-           <a
+          <a
             href="#"
             class="cards"
             target="_blank"
@@ -141,21 +141,21 @@
               src="img/icon-pacotes-interacionais.png"
               alt="Icone de avião"
             />
-            <h3>Pacotes <br> Internacionais</h3>
+            <h3>
+              Pacotes <br />
+              Internacionais
+            </h3>
           </a>
-           <a
+          <a
             href="#"
             class="cards single-line"
             target="_blank"
             title="Busque Categoria Pacotes Transfer"
           >
-            <img
-              src="img/icon-transfer.png"
-              alt="Icone de Carro"
-            />
+            <img src="img/icon-transfer.png" alt="Icone de Carro" />
             <h3>Transfer</h3>
           </a>
-           <a
+          <a
             href="#"
             class="cards single-line tranfer"
             target="_blank"
@@ -167,6 +167,54 @@
             />
             <h3>Seguro Viagem</h3>
           </a>
+        </div>
+      </section>
+      <section class="destinations">
+        <div class="section-title">
+          <h2>Destinos Populares</h2>
+          <hr />
+        </div>
+        <div class="destination-items">
+          <article class="item">
+            <header>
+              <div class="img-item tokyo"></div>
+              <h4>Tokyo</h4>
+            </header>
+            <p>
+              Tóquio é uma cidade vibrante e cosmopolita, com seus templos
+              históricos, museus de arte moderna e arranha-céus icônicos. Não
+              perca a chance de mergulhar em sua atmosfera fascinante.
+            </p>
+            <footer>
+              <a
+                href="#"
+                target="_blank"
+                title="Veja mais detalhes do destino Tokyo"
+                class="button"
+                >Ver Detalhes</a
+              >
+            </footer>
+          </article>
+          <article class="item">
+            <header>
+              <div class="img-item osaka"></div>
+              <h4>Osaka</h4>
+            </header>
+            <p>
+              Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
+              por sua gastronomia deliciosa e por ser um excelente ponto de
+              partida para explorar outras cidades japonesas próximas.
+            </p>
+            <footer>
+              <a
+                href="#"
+                target="_blank"
+                title="Veja mais detalhes do destino Osaka"
+                class="button"
+                >Ver Detalhes</a
+              >
+            </footer>
+          </article>
         </div>
       </section>
     </main>
