Reutiliza estilo de textos

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <main>
       <section class="hero">
         <div class="hero-img"></div>
-        <h2>
+        <h2 class="content-text">
           Somos uma agência apaixonada por criar viagens inesquecíveis. Do
           destino à seleção das atividades, cuidamos de todos os detalhes para
           que você aproveite ao máximo cada momento da sua jornada!
         </h2>
       </section>
-      <section class="section-page offers">
+      <section class="offers">
         <div class="section-title">
           <h2>Ofertas da Semana</h2>
           <hr />
@@ -65,8 +65,8 @@
         <div class="offers-cards">
           <article class="card japao">
             <header>
-              <p>HOTEL+AÉREO</p>
-              <h3>
+              <p class="content-text">HOTEL+AÉREO</p>
+              <h3 class="content-title">
                 Japão<br />
                 <span>R$ 4000</span>
               </h3>
@@ -77,8 +77,8 @@
           </article>
           <article class="card san-andreas">
             <header>
-              <p>HOTEL+AÉREO</p>
-              <h3>
+              <p class="content-text">HOTEL+AÉREO</p>
+              <h3 class="content-title">
                 San Andreas<br />
                 <span>R$ 3000</span>
               </h3>
@@ -89,8 +89,8 @@
           </article>
           <article class="card paraiba">
             <header>
-              <p>HOTEL+AÉREO</p>
-              <h3>
+              <p class="content-text">HOTEL+AÉREO</p>
+              <h3 class="content-title">
                 Paraíba<br />
                 <span>R$ 1200</span>
               </h3>
@@ -101,8 +101,8 @@
           </article>
           <article class="card manaus">
             <header>
-              <p>HOTEL+AÉREO</p>
-              <h3>
+              <p class="content-text">HOTEL+AÉREO</p>
+              <h3 class="content-title">
                 Manaus<br />
                 <span>R$ 1600</span>
               </h3>
@@ -129,7 +129,7 @@
               src="img/icon-pacotes-nacionais.png"
               alt="Icone de alpinista"
             />
-            <h3>Pacotes <br />Nacionais</h3>
+            <h3 class="content-title">Pacotes <br />Nacionais</h3>
           </a>
           <a
             href="#"
@@ -141,7 +141,7 @@
               src="img/icon-pacotes-interacionais.png"
               alt="Icone de avião"
             />
-            <h3>
+            <h3 class="content-title">
               Pacotes <br />
               Internacionais
             </h3>
@@ -153,7 +153,7 @@
             title="Busque Categoria Pacotes Transfer"
           >
             <img src="img/icon-transfer.png" alt="Icone de Carro" />
-            <h3>Transfer</h3>
+            <h3 class="content-title">Transfer</h3>
           </a>
           <a
             href="#"
@@ -165,7 +165,7 @@
               src="img/icon-seguro-viagem.png"
               alt="Globo terrestre com cadeado"
             />
-            <h3>Seguro Viagem</h3>
+            <h3 class="content-title">Seguro Viagem</h3>
           </a>
         </div>
       </section>
@@ -178,9 +178,9 @@
           <article class="item">
             <header>
               <div class="img-item tokyo"></div>
-              <h4>Tokyo</h4>
+              <h4 class="content-title">Tokyo</h4>
             </header>
-            <p>
+            <p class="content-text">
               Tóquio é uma cidade vibrante e cosmopolita, com seus templos
               históricos, museus de arte moderna e arranha-céus icônicos. Não
               perca a chance de mergulhar em sua atmosfera fascinante.
@@ -198,9 +198,9 @@
           <article class="item">
             <header>
               <div class="img-item osaka"></div>
-              <h4>Osaka</h4>
+              <h4 class="content-title">Osaka</h4>
             </header>
-            <p>
+            <p class="content-text">
               Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
               por sua gastronomia deliciosa e por ser um excelente ponto de
               partida para explorar outras cidades japonesas próximas.
@@ -216,6 +216,22 @@
             </footer>
           </article>
         </div>
+      </section>
+      <section class="payments">
+        <div class="section-title">
+          <h2>Condições de Pagamento</h2>
+          <hr />
+        </div>
+        <div class="text-content">
+          <h3 class="content-title">Parcelamento em até 12x!</h3>
+          <p class="content-text">
+            Viaje pagando em até 12 parcelas no cartão, à vista no crédito com
+            5% de desconto ou no Pix com 10% de desconto!
+          </p>
+        </div>
+        <div class="image bag"></div>
+        <div class="image passport"></div>
+        <div class="image peoples"></div>
       </section>
     </main>
   </body>
