Finalizando estilizacao da grid

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="hero-img"></div>
         <h2 class="content-text">
           Somos uma agência apaixonada por criar viagens inesquecíveis. Do
@@ -216,22 +216,26 @@
             </footer>
           </article>
         </div>
-      </section>
+      </section> -->
       <section class="payments">
         <div class="section-title">
           <h2>Condições de Pagamento</h2>
           <hr />
         </div>
-        <div class="text-content">
-          <h3 class="content-title">Parcelamento em até 12x!</h3>
-          <p class="content-text">
-            Viaje pagando em até 12 parcelas no cartão, à vista no crédito com
-            5% de desconto ou no Pix com 10% de desconto!
-          </p>
+        <div class="content-container">
+          <div class="text-content">
+            <h3 class="content-title">Parcelamento em até 12x!</h3>
+            <p class="content-text">
+              Viaje pagando em até 12 parcelas no cartão, à vista no crédito com
+              5% de desconto ou no Pix com 10% de desconto!
+            </p>
+          </div>
+          <div class="image-gallery">
+            <div class="image bag"></div>
+            <div class="image passport"></div>
+            <div class="image peoples"></div>
+          </div>
         </div>
-        <div class="image bag"></div>
-        <div class="image passport"></div>
-        <div class="image peoples"></div>
       </section>
     </main>
   </body>
