Corrige bugs na galeria de pagamentos

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="hero-img"></div>
         <h2 class="content-text">
           Somos uma agência apaixonada por criar viagens inesquecíveis. Do
@@ -216,7 +216,7 @@
             </footer>
           </article>
         </div>
-      </section> -->
+      </section>
       <section class="payments">
         <div class="section-title">
           <h2>Condições de Pagamento</h2>
