--- a/index.html
+++ b/index.html
@@ -317,6 +317,28 @@
         </div>
         
       </section>
+      <section class="bottom-hero">
+        <div class="hero-img"></div>
+      </section>
+      <footer class="main-footer">
+        <div class="footer-content">
+          <img src="img/logo-branco-jornada-viagens-com-tagline.png" alt="Logo Jornada Viagens na cor branca">
+          <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+          <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
+        </div>
+        <div class="footer-social">
+          <p>Acesse nossas redes:</p>
+          <a href="#" target="_blank">
+            <img src="img/Whatsapp.png" alt="Icone do WhatsApp">
+          </a>
+          <a href="#" target="_blank">
+            <img src="img/Instragam.png" alt="Icone do Instagram">
+          </a>
+          <a href="#" target="_blank">
+            <img src="img/Twiter.png" alt="Icone do Twitter">
+          </a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
